src/alto-ui/SideNav/SideNav.scss
@import '../scss/inc';

$nav-btn-hover-bkgd: rgba($red, 0.3);
$nav-btn-hover-text: $red-80;
$nav-btn-hover-text-dark: $white;

.sidenav {
  display: flex;
  transition: width $transition;
  position: relative;
  background-color: $white;

  &--dark {
    background-color: $coolgrey-90;
  }

  @include on-medium-and-wide {
    box-shadow: inset 0 5px 0 $red, 1px 0 0 $coolgrey-20;
    padding-top: 5px;
    flex-direction: column;
    width: 200px;
    height: 100%;

    &--dark {
      box-shadow: inset 0 5px 0 $red, 1px 0 0 $coolgrey-80;
    }
  }

  @include on-narrow {
    box-shadow: inset 0 5px 0 $red;
    align-items: center;
    padding: 5px 0.75rem 0;
    border-bottom: 1px solid $coolgrey-20;

    &--dark {
      border-bottom: $coolgrey-80;
    }
  }
}
.sidenav--collapsed {
  @include on-medium-and-wide {
    width: 3.125rem;
  }
}

.sidenav__header {
  display: flex;
  // align-items: center;
  border-bottom: 1px solid $coolgrey-20;

  .sidenav--dark & {
    border-bottom: 1px solid $coolgrey-80;
  }

  @include on-narrow {
    border-bottom: 0;
    // background-color: $coolgrey-90;
    // position: relative;
    // z-index: 1001;
  }
}

.sidenav__logo {
  font-size: $font-size-x-large;
  font-weight: $font-weight-light;
  text-align: center;
  line-height: $header-height;
  height: $header-height;
  overflow: hidden;
  transition: color $transition;
  flex: 1;
  display: none;
  color: $red;

  @include MQ(Mplus) {
    display: block;
    line-height: $header-height + 2;
    height: $header-height + 2;
  }

  &--narrow {
    text-align: left;
    display: none;
    @include on-narrow {
      display: block;
    }
  }
}

.sidenav__button {
  font: inherit;
  background: transparent;
  border: 0;
  outline: 0;
  border-radius: 0;
  line-height: 2;
  width: 100%;
  display: flex;
  height: $spacing-xx-large;
  cursor: pointer;
  transition: all $transition;
}

.sidenav__icon-container {
  display: flex;

  i {
    margin: auto;
    transition: transform $transition;
  }

  &--reverse i {
    transform: rotate(-180deg);
  }
}

.sidenav__menu-button {
  min-width: 4rem;
  @include on-medium-and-wide {
    display: none;
  }
}

.sidenav__sections-list {
  border-bottom: 1px solid $coolgrey-20;
  flex: 1;
  list-style: none;
  overflow-y: auto;
  overflow-x: hidden;

  @include on-narrow {
    display: none;
  }

  color: $coolgrey-50;

  .sidenav--dark & {
    color: rgba($white, 0.8);
    border-bottom: 1px solid $coolgrey-80;
  }
}

.sidenav__sections-list-narrow-container {
  display: none;
  position: fixed;
  top: $header-height;
  height: 0;
  left: 0;
  right: 0;
  transition: height $transition;
  z-index: 1000;
  overflow: hidden;

  @include on-narrow {
    display: block;
  }

  &--open {
    height: calc(100vh - #{$header-height});
  }
}

.sidenav__sections-list-narrow {
  list-style: none;
  position: absolute;
  height: calc(100vh - #{$header-height});
  width: 100%;
  bottom: 0;
  overflow: auto;
  background-color: $white;
  color: $coolgrey-70;

  .sidenav--dark & {
    background-color: $coolgrey-90;
    color: $white;
  }
}

.sidenav__section {
  @include on-medium-and-wide {
    position: relative;
    width: 200px;
    &--collapsed {
      width: 3.125rem;
    }
  }
}

.sidenav__toggle-button {
  @extend .sidenav__button;
  font-size: $font-size-x-large;
  height: $footer-height;
  i {
    transform: rotate(45deg);
  }
  @include on-narrow {
    display: none;
  }
}

.sidenav__route-link,
.sidenav__section-button {
  @extend .sidenav__button;
  display: block;
  overflow: hidden;

  @include on-medium-and-wide {
    width: 200px;
  }
}

.sidenav__route-link {
  &--active {
    font-weight: 600;
  }
}

.sidenav__section-item {
  display: flex;
  align-items: center;
  height: 100%;
}

.sidenav__section-item-icon {
  font-size: $font-size-x-large;
  width: 2.25rem;
  margin-left: 7px;
  display: flex;
  transition: width $transition;

  i {
    margin: auto;
  }
}

.sidenav__section-item-title {
  font-size: $font-size-medium;
  flex: 1;
  font-weight: 400;
  text-align: left;
}

.sidenav__section-item-chevron {
  font-size: $font-size-x-small;
  width: 2.5rem;
}

.sidenav__content {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
  flex: 1;
  padding: 0 1rem;

  @include MQ(Mplus) {
    border-bottom: 1px solid $coolgrey-20;
    padding: 0 1.25rem;
    flex: 0 0 auto;
    justify-content: center;

    .sidenav--dark & {
      border-bottom: 1px solid $coolgrey-80;
    }
  }
}

.sidenav__content-item {
  // RENAUD: I know you will hate me for this, but I have no other way of
  // styling the avatar to size it to a size I want it to be.
  // This is why I need these in the Component.
  @include MQ(Mplus) {
    padding: 0.75rem 0;
  }
  > .avatar {
    font-size: 2rem;
    @include MQ(Mplus) {
      font-size: 3rem;
    }
  }
}

@each $name, $color in $colors {
  .sidenav--#{$name} {
    @include on-medium-and-wide {
      box-shadow: inset 0 5px 0 $color, 1px 0 0 $coolgrey-20;

      &.sidenav--dark {
        box-shadow: inset 0 5px 0 $color, 1px 0 0 $coolgrey-80;
      }
    }

    @include on-narrow {
      box-shadow: inset 0 5px 0 $color;
    }
    .sidenav__logo {
      color: $color;
    }

    .sidenav__button,
    .sidenav__toggle-button,
    .sidenav__section-button,
    .sidenav__route-link {
      color: $coolgrey-50;

      &:hover {
        background-color: $color; //mix($white, $coolgrey-90, 92%);
        color: $white; //$color;
      }
    }

    .sidenav__section-button {
      box-shadow: inset 0 0 0 $color;

      &--active {
        box-shadow: inset 5px 0 0 $color;
        background-color: $grey-10;
        color: $color;
      }
    }

    .sidenav__route-link {
      color: $coolgrey-40;
      &--active {
        background-color: $color;
        color: $white;
      }
    }

    &.sidenav--dark {
      .sidenav__button,
      .sidenav__toggle-button,
      .sidenav__section-button,
      .sidenav__route-link {
        color: $coolgrey-40;

        &:hover {
          background-color: transparent; //mix($white, $coolgrey-90, 92%);
          color: $white; //$color;
        }
      }

      .sidenav__section-button--active {
        background: mix($coolgrey-90, black, 40%);
        color: $white;
      }

      .sidenav__route-link--active,
      .sidenav__route-link--active:hover {
        background-color: $color;
        color: $white;
      }
    }
  }
}

.sidenav__panel {
  position: absolute;
  background: $white;
  transition: all $duration-prompt $timing-function;
  box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
  overflow: hidden;
  z-index: $z-index-modal;

  @include on-medium-and-wide {
    top: 0;
    margin-left: 1px;
    left: 100%;
    bottom: 0;
    width: 0;
  }

  @include on-narrow {
    left: 0;
    right: 0;
    bottom: 100%;
    height: 100%;
    position: fixed;
  }

  &--open {
    @include on-medium-and-wide {
      box-shadow: 1px 0 0 $coolgrey-20;
      width: 350px;
    }

    @include on-narrow {
      box-shadow: 0 1px 0 $coolgrey-20;
      bottom: 0;
    }
  }
}

.sidenav__panel-container {
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;

  @include on-medium-and-wide {
    width: 350px;
  }

  @include on-narrow {
    left: 0;
  }
}

.sidenav__panel-header {
  border-bottom: 1px solid $coolgrey-20;
  padding: $spacing-large $spacing-medium;
  display: flex;
  align-items: center;
  height: $header-height;
}

.sidenav__panel-title {
  font-size: $font-size-large;
  font-weight: $font-weight-semibold;
  color: $coolgrey-60;
  flex: 1;
}

.sidenav__panel-body {
  overflow: auto;
  flex: 1;
}

